# catc_usb_chief_driver

./: .gitignore  CMakeLists.txt  readme.md  sign_driver.ps1  usbchief.inf
.github/workflows/: build.yml
chief/: device_extension.hpp  driver.cpp  driver.hpp  major_functions.cpp  major_functions.hpp  maybe.hpp  pipe.cpp  pipe.hpp  spinlock.cpp  spinlock.hpp  usb.cpp  usb.hpp
